tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/const_and_var_same_name.fg
/; EXPECT_ERROR: VariableAlreadyDeclared
const x:int = 5
var x:int = 10

